--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,6 @@ tokio = { version = "1.34.0", features = [
 tower-lsp = { version = "0.20.0", features = ["proposed"] }
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 log = "0.4.20"
+serde = { version = "1.0.193", features = ["derive"] }
+serde-xml-rs = "0.6.0"
+anyhow = "1.0.75"
