--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,9 @@ tokio = { version = "1.34.0", features = [
   "io-std",
 ] }
 tower-lsp = { version = "0.20.0", features = ["proposed"] }
-tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 log = "0.4.20"
 serde = { version = "1.0.193", features = ["derive"] }
 serde-xml-rs = "0.6.0"
 anyhow = "1.0.75"
+tracing = "0.1.40"
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
