--- a/clients/intellij/gradle.properties
+++ b/clients/intellij/gradle.properties
@@ -1,8 +1,8 @@
 # IntelliJ Platform Artifacts Repositories -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
 
 pluginGroup = com.github.doddi
-pluginName = iq-lsp 
-pluginRepositoryUrl = https://github.com/doddi/iq-lsp
+pluginName = vuln-lsp
+pluginRepositoryUrl = https://github.com/doddi/vuln-lsp
 # SemVer format -> https://semver.org
 pluginVersion = 0.0.1
 
