--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,23 +1,44 @@
 name: Vuln-Lsp
 
-
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 env:
   CARGO_TERM_COLOR: always
 
 jobs:
   build:
+    runs-on: ${{ matrix.runner }}
 
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        include:
+          - name: linux-amd64
+            runner: ubuntu-latest
+            target: x84_64-unknown-linux-gnu
+          - name: win-amd64
+            runner: windiws-latest
+            target: x84_64-pc-windows-msvc
+          - name: macos-amd64
+            runner: macos-latest
+            target: x84_64-apple-darwin
+          - name: macos-arm64
+            runner: macos-latest
+            target: arch64-apple-darwin
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Build
-      run: cargo build --verbose
-    - name: Run tests
-      run: cargo test --verbose
+      - name: checkout
+        uses: actions/checkout@v3
+
+      - name: Install rust
+        uses: dtolnay/rust-toolchain@stable
+        with:
+          targets: "${{ matrix.target }}"
+
+      - name: Build
+        run: cargo build --verbose --locked --release --target ${{ matrix.target }}
+      - name: Run tests
+        run: cargo test --verbose
