--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -27,7 +27,7 @@ jobs:
             target: x86_64-apple-darwin
           - name: macos-arm64
             runner: macos-latest
-            target: arch64-apple-darwin
+            target: aarch64-apple-darwin
 
     steps:
       - name: checkout
