--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -19,19 +19,19 @@ jobs:
           - name: linux-amd64
             runner: ubuntu-latest
             target: x86_64-unknown-linux-gnu
-            build: vul-lsp
+            build: vuln-lsp
           - name: win-amd64
             runner: windows-latest
             target: x86_64-pc-windows-msvc
-            build: vul-lsp.exe
+            build: vuln-lsp.exe
           - name: macos-amd64
             runner: macos-latest
             target: x86_64-apple-darwin
-            build: vul-lsp
+            build: vuln-lsp
           - name: macos-arm64
             runner: macos-latest
             target: aarch64-apple-darwin
-            build: vul-lsp
+            build: vuln-lsp
 
     steps:
       - name: checkout
