--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+
 tokio = { version = "1.34.0", features = [
   "rt-multi-thread",
   "macros",
@@ -13,8 +14,11 @@ tower-lsp = { version = "0.20.0", features = ["proposed"] }
 log = "0.4.20"
 serde = { version = "1.0.193", features = ["derive"] }
 serde-xml-rs = "0.6.0"
+serde_json = "1.0.108"
 anyhow = "1.0.75"
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 futures = "0.3.29"
 async-trait = "0.1.74"
+reqwest = { version = "0.11.22", features = ["json"] }
+clap = { version = "4.4.10", features = ["derive", "cargo"] }
