--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,4 @@ futures = "0.3.29"
 async-trait = "0.1.74"
 reqwest = { version = "0.11.22", features = ["json"] }
 clap = { version = "4.4.10", features = ["derive", "cargo"] }
+rand = "0.8.5"
