--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ log = "0.4.20"
 serde = { version = "1.0.193", features = ["derive"] }
 serde-xml-rs = "0.6.0"
 serde_json = "1.0.108"
-anyhow = "1.0.75"
+anyhow = { version = "1.0.75", features = ["default"] }
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 futures = "0.3.29"
@@ -23,3 +23,4 @@ async-trait = "0.1.74"
 reqwest = { version = "0.11.22", features = ["json"] }
 rand = "0.8.5"
 clap = { version = "4.4.11", features = ["derive", "cargo"] }
+thiserror = "1.0.50"
