--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,5 @@ reqwest = { version = "0.11.22", features = ["json"] }
 rand = "0.8.5"
 clap = { version = "4.4.11", features = ["derive", "cargo"] }
 thiserror = "1.0.50"
+toml = "0.8.8"
+cargo_toml = "0.17.2"
