--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,13 +16,25 @@ serde = { version = "1.0.193", features = ["derive"] }
 serde-xml-rs = "0.6.0"
 serde_json = "1.0.108"
 anyhow = { version = "1.0.75", features = ["default"] }
-tracing = "0.1.40"
-tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 futures = "0.3.29"
 async-trait = "0.1.74"
-reqwest = { version = "0.11.22", features = ["json"] }
+reqwest = { version = "0.12.7", features = ["json"] }
 rand = "0.8.5"
 clap = { version = "4.4.11", features = ["derive", "cargo"] }
 thiserror = "1.0.50"
 toml = "0.8.8"
-cargo_toml = "0.17.2"
+cargo_toml = "0.20.4"
+
+tonic = { version = "0.12.2", features = ["tls", "tls-roots"] }
+tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
+opentelemetry = "=0.25.0"
+opentelemetry-otlp = { version = "=0.25.0", features = [
+  "reqwest-client",
+  "reqwest-rustls",
+  "http-proto",
+  "tls",
+] }
+tracing = "0.1"
+tracing-opentelemetry = "=0.26.0"
+opentelemetry_sdk = { version = "=0.25.0" }
+# opentelemetry_sdk = { version = "=0.25.0", features = ["rt-tokio"] }
