--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,6 @@ tokio = { version = "1.34.0", features = [
   "io-std",
 ] }
 tower-lsp = { version = "0.20.0", features = ["proposed"] }
-log = "0.4.20"
 serde = { version = "1.0.193", features = ["derive"] }
 serde-xml-rs = "0.6.0"
 serde_json = "1.0.108"
@@ -25,16 +24,18 @@ thiserror = "1.0.50"
 toml = "0.8.8"
 cargo_toml = "0.20.4"
 
-tonic = { version = "0.12.2", features = ["tls", "tls-roots"] }
-tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
-opentelemetry = "=0.25.0"
-opentelemetry-otlp = { version = "=0.25.0", features = [
-  "reqwest-client",
-  "reqwest-rustls",
-  "http-proto",
-  "tls",
-] }
-tracing = "0.1"
+tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
+tracing = "0.1.9"
 tracing-opentelemetry = "=0.26.0"
-opentelemetry_sdk = { version = "=0.25.0" }
-# opentelemetry_sdk = { version = "=0.25.0", features = ["rt-tokio"] }
+
+opentelemetry = "=0.25.0"
+opentelemetry-appender-tracing = "=0.25.0"
+opentelemetry-http = "=0.25.0"
+opentelemetry-otlp = { version = "=0.25.0", features = [
+  "tonic",
+  "http-proto",
+  "logs",
+  "reqwest-client",
+] }
+opentelemetry-semantic-conventions = { version = "=0.25.0" }
+opentelemetry_sdk = { version = "=0.25.0", features = ["rt-tokio", "logs"] }
