--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,21 @@ name = "vuln-lsp"
 version = "0.1.0"
 edition = "2021"
 
-[dependencies]
+[features]
+default = []
+logging = []
+logging-file = ["logging"]
+logging-otel = [
+  "logging",
+  "dep:opentelemetry",
+  "dep:opentelemetry-appender-tracing",
+  "dep:opentelemetry-http",
+  "dep:opentelemetry-otlp",
+  "dep:opentelemetry-semantic-conventions",
+  "dep:opentelemetry_sdk",
+]
 
+[dependencies]
 tokio = { version = "1.34.0", features = [
   "rt-multi-thread",
   "macros",
@@ -28,14 +41,17 @@ tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
 tracing = "0.1.9"
 tracing-opentelemetry = "=0.26.0"
 
-opentelemetry = "=0.25.0"
-opentelemetry-appender-tracing = "=0.25.0"
-opentelemetry-http = "=0.25.0"
+opentelemetry = { version = "=0.25.0", optional = true }
+opentelemetry-appender-tracing = { version = "=0.25.0", optional = true }
+opentelemetry-http = { version = "=0.25.0", optional = true }
 opentelemetry-otlp = { version = "=0.25.0", features = [
   "tonic",
   "http-proto",
   "logs",
   "reqwest-client",
-] }
-opentelemetry-semantic-conventions = { version = "=0.25.0" }
-opentelemetry_sdk = { version = "=0.25.0", features = ["rt-tokio", "logs"] }
+], optional = true }
+opentelemetry-semantic-conventions = { version = "=0.25.0", optional = true }
+opentelemetry_sdk = { version = "=0.25.0", features = [
+  "rt-tokio",
+  "logs",
+], optional = true }
