--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -42,19 +42,19 @@ jobs:
     strategy:
       matrix:
         include:
-          - name: ${{github.action}}-linux-amd64
+          - name: ${{github.workflow}}-linux-amd64
             runner: ubuntu-latest
             target: x86_64-unknown-linux-gnu
             build: vuln-lsp
-          # - name: ${{github.action}}-win-amd64
+          # - name: ${{github.workflow}}-win-amd64
           #   runner: windows-latest
           #   target: x86_64-pc-windows-msvc
           #   build: vuln-lsp.exe
-          # - name: ${{github.actio}}-macos-amd64
+          # - name: ${{github.workflow}}-macos-amd64
           #   runner: macos-latest
           #   target: x86_64-apple-darwin
           #   build: vuln-lsp
-          # - name: ${{github.action}}-macos-arm64
+          # - name: ${{github.workflow}}-macos-arm64
           #   runner: macos-latest
           #   target: aarch64-apple-darwin
           #   build: vuln-lsp
